# course_rust4bioinfo

./: .gitignore  Makefile  _quarto.yml  audience.md  authors.md  designprinciples.md  dictionary.qmd  elo.md  index.qmd  styles.css
day1/: 00-concepts.qmd  00a-hello-dna.qmd  00b-sequence-length.qmd  00c-first-last-base.qmd  00d-repeat-motif.qmd  00e-types-quiz.qmd  01-gc-content.qmd  02-complement.qmd  03-base-counts.qmd  04-phred.qmd  05-hamming.qmd  README.md  lec1-why-rust.qmd  lec2-rust-syntax.qmd
day10/: 00-concepts.qmd  00a-quiz.qmd  01-dense-matrix.qmd  02-sparse-matrix.qmd  03-gauss-seidel.qmd  04-markov-chain.qmd  README.md  lec1-matrices-and-iterative-methods.qmd
day11/: 00-concepts.qmd  00a-quiz.qmd  01-tensors.qmd  02-one-hot.qmd  03-gc-content.qmd  04-distance-matrix.qmd  05-pca.qmd  06-motif-scanner.qmd  07-promoter-classifier.qmd  README.md  lec1-gpu-and-burn.qmd
day12/: 00-concepts.qmd  00a-quiz.qmd  01-vector-add.qmd  02-saxpy.qmd  03-gc-content.qmd  04-revcomp.qmd  05-reduction.qmd  06-pairwise-distance.qmd  README.md  lec1-wgpu-compute.qmd
day13/: 00-concepts.qmd  00a-quiz.qmd  01-numbers-and-bits.qmd  02-pack-dna-2bit.qmd  03-hamming-popcount.qmd  04-revcomp-2bit.qmd  05-barcode-whitelist.qmd  README.md  lec1-numbers-and-bits.qmd  lec2-dna-2bit-and-barcodes.qmd
day2/: 00-concepts.qmd  00a-ownership-quiz.qmd  01-reverse-complement.qmd  02-revcomp-buf.qmd  03-kmers.qmd  04-quality-trim.qmd  README.md  (+1 more)
day6/ex-sequence-inspector-solution/frontend/: Cargo.toml  Trunk.toml  index.html
day6/ex-sequence-inspector-solution/frontend/src/: main.rs
(+316 files in other folders)
