[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
yew = { version = "0.23", features = ["csr"] }
gloo-net = { version = "0.7", features = ["http", "json"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "HtmlInputElement"] }
